Add missions module
mission & details

--- a/src/app/core/pages/about/about.page.html
+++ b/src/app/core/pages/about/about.page.html
@@ -17,7 +17,7 @@
       </ion-label>
     </ion-item-divider>
     <ion-item lines="none">
-      <ion-button class="ml-3 mt-2 mb-2"(click)="openLink('https://api.spacexdata.com/v3/')">
+      <ion-button expand="full" class="mt-2 mb-2"(click)="openLink('https://api.spacexdata.com/v3/')">
         https://api.spacexdata.com/v3
         <ion-icon class="pl-3" name="arrow-forward"></ion-icon>
       </ion-button>
@@ -36,7 +36,7 @@
       </ion-label>
     </ion-item-divider>
     <ion-item lines="none">
-      <ion-button class="ml-3 mt-2 mb-2" (click)="openLink('https://api.spacexdata.com/v3/info')">
+      <ion-button expand="full" class="mt-2 mb-2" (click)="openLink('https://api.spacexdata.com/v3/info')">
         https://api.spacexdata.com/v3/info
         <ion-icon class="pl-3" name="arrow-forward"></ion-icon>
       </ion-button>
