fix missing inAppBrower import

--- a/src/app/missions/pages/missions.page.html
+++ b/src/app/missions/pages/missions.page.html
@@ -50,8 +50,8 @@
       <ion-input [(ngModel)]="missionId" placeholder="id" required></ion-input>
     </ion-col>
   </ion-row>
-  <ion-row padding class="d-flex align-items-center">
-    <ion-button expand="full" class=" w-100" [routerLink]="['/missions/', missionId]" routerDirection="forward">
+  <ion-row padding class="d-flex align-items-center pt-0">
+    <ion-button expand="full" class="w-100" [routerLink]="['/missions/', missionId]" routerDirection="forward">
       Go to mission's details
       <ion-icon class="pl-3" name="arrow-forward"></ion-icon>
     </ion-button>
