--- a/src/app/missions/pages/missions.page.html
+++ b/src/app/missions/pages/missions.page.html
@@ -52,8 +52,8 @@
   </ion-row>
   <ion-row padding class="d-flex align-items-center pt-0">
     <ion-button expand="full" class="w-100" [routerLink]="['/missions/', missionId]" routerDirection="forward">
-      Go to mission's details
-      <ion-icon class="pl-3" name="arrow-forward"></ion-icon>
+      Details
+      <ion-icon class="pl-3" name="add"></ion-icon>
     </ion-button>
   </ion-row>
 </ion-content>
