--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,6 +29,11 @@
             </ion-card-content>
           </ion-card>
         </div>
+        <div class="countdown" *ngIf="launch">
+          <label>Next Launch in :</label><br>
+          <img src="https://img.icons8.com/material-two-tone/64/000000/timer.png"/>
+          <label id="timer">Loading..{{setTimer(launch.launch_date_utc)}}{{timer}}</label>
+        </div>
         <ion-list>
           <ion-menu-toggle auto-hide="false" *ngFor="let p of pages">
             <ion-item [routerLink]="[p.url]" routerDirection="forward"
