--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -8,3 +8,15 @@
 .active-menu-item {
     border-left: 6px solid var(--ion-color-primary);
 }
+.countdown {
+    font-size: 16px;
+    width: 100%;
+    text-align: center;
+    padding: 20px;
+    position: relative;
+}
+.countdown img {
+    position: absolute;
+    left: 20px;
+    top: 20px;
+}
