Changed fonts + color

--- a/src/app/launches/pages/next-launches/next-launches.page.html
+++ b/src/app/launches/pages/next-launches/next-launches.page.html
@@ -13,7 +13,7 @@
       <ion-card-header>
         <ion-card-subtitle>{{launch.launch_date_utc | date:'fullDate'}}</ion-card-subtitle>
         <ion-card-title>{{launch.mission_name}}</ion-card-title>
-        <ion-note color="secondary">{{launch.launch_site.site_name_long}}</ion-note>x
+        <ion-note color="secondary note_title">{{launch.launch_site.site_name_long}}</ion-note>
       </ion-card-header>
       <ion-card-content>
         <p>{{launch.details}}</p>
