--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -16,12 +16,12 @@
    --ion-color-primary-tint: #E3872C;
  
    /** secondary **/
-   --ion-color-secondary: #3F51B5;
+   --ion-color-secondary: #000000;
    --ion-color-secondary-rgb: 63,81,181;
-   --ion-color-secondary-contrast: #ffffff;
+   --ion-color-secondary-contrast: #000000;
    --ion-color-secondary-contrast-rgb: 255,255,255;
-   --ion-color-secondary-shade: #37479f;
-   --ion-color-secondary-tint: #5262bc;
+   --ion-color-secondary-shade: #000000;
+   --ion-color-secondary-tint: #000000;
  
    /** tertiary **/
    --ion-color-tertiary: #E91E63;
