--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
         <div class="countdown" *ngIf="launch">
           <label>Next Launch in :</label><br>
           <img src="https://img.icons8.com/material-two-tone/64/000000/timer.png"/>
-          <label id="timer">Loading..{{setTimer(launch.launch_date_utc)}}{{timer}}</label>
+          <label id="timer">Loading..{{setTimer(launch.launch_date_utc)}}</label>
         </div>
         <ion-list>
           <ion-menu-toggle auto-hide="false" *ngFor="let p of pages">
